fix: Fony display on Safari

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -5,7 +5,8 @@
   font-weight: 300;
   font-display: swap;
   src: url('../fonts/montserrat-alternates-v12-latin-300italic.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/montserrat-alternates-v12-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  src: local(''),
+       url('../fonts/montserrat-alternates-v12-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('../fonts/montserrat-alternates-v12-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/montserrat-alternates-v12-latin-300italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/montserrat-alternates-v12-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
@@ -18,7 +19,8 @@
   font-weight: 400;
   font-display: swap;
   src: url('../fonts/montserrat-v18-latin-regular.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/montserrat-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  src: local(''),
+       url('../fonts/montserrat-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('../fonts/montserrat-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/montserrat-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/montserrat-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
